# atlas-swarm

./: .gitignore  generate_render.py  main.py  pyproject.toml  swarm_config.yaml
atlas_swarm/: __init__.py  agent_base.py  aim.py  cad_engine.py  cad_examples.py  cad_library.py  ceo_agent.py  company_ops.py  competitive_intel.py  config.py  executive_agents.py  first_product_catalog.py  ideafrog.py  kie.py  knowledge_bridge.py  local_text_to_3d.py  memory.py  mesh_gen.py  orchestrator.py  printability.py  router.py  video.py  visualizer.py
memory-vault/: README.md
renders/: viewer.html
templates/: cad_examples.yaml  cad_prompts.yaml  products.yaml
